<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/aditya_raghavan"
        android:textColor="@color/white"
        android:textSize="20sp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:text="@string/_2047204"

        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:text="@string/aditya_raghavan_mca_christuniversity_in"

        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/countTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"

        android:gravity="center"
        android:paddingTop="0dp"
        android:text="@string/countInitial"
        android:textColor="@color/green"
        android:textSize="200sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:layout_gravity="right"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/img3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/toastButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0sp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:onClick="ToastButtonClicked"
            android:text="@string/toastButtonContent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/countButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:onClick="countButtonClicked"
            android:text="@string/countButtonText"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>